--- a/Message_Asist_0.8
+++ b/Message_Asist_0.8
@@ -7,6 +7,8 @@
 // @match        https://msg.ameba.jp/*
 // @icon        https://www.google.com/s2/favicons?sz=64&domain=ameba.jp
 // @grant        none
+// @updateURL        https://github.com/personwritep/Message_Asist/raw/main/Message_Asist.user.js
+// @downloadURL        https://github.com/personwritep/Message_Asist/raw/main/Message_Asist.user.js
 // ==/UserScript==
 
 
